# RiichiEnv-PPO

./: .gitignore  .gitmodules  README.md  experience.ipynb  experience_human_vs_3ai_ui.ipynb  pyproject.toml  requirements-training-dev.txt
docs/: BENCHMARK.md  DEVELOPMENT_GUIDE.md  FEATURE_ENCODING.md  METRIC.md  RULES.md  SEQUENCE_FEATURE_ENCODING.md  TRANSFORMER_GPU_FIXES.md
riichienv-core/: Cargo.toml
riichienv-core/benches/: agari_bench.rs
riichienv-core/benches/data/: agari_3p.json  agari_4p.json  hands_negative.json
riichienv-core/src/: action.rs  errors.rs  hand_evaluator.rs  hand_evaluator_3p.rs  lib.rs  parser.rs  rule.rs  tests.rs
riichienv-core/src/observation/: encode.rs  helpers.rs  mod.rs  python.rs
riichienv-core/src/observation_3p/: encode.rs  helpers.rs  mod.rs
riichienv-core/src/replay/: mjai_replay.rs  mod.rs
riichienv-core/src/state/: event_handler.rs  legal_actions.rs  mod.rs
riichienv-core/src/state_3p/: event_handler.rs  legal_actions.rs  mod.rs  sanma.rs
riichienv-core/tests/: agari_correctness.rs
riichienv-ml/: pyproject.toml
riichienv-ml/scripts/: eval_head_to_head.py  human_vs_ai_web.py  import_mjai_zip.py  infer_riichienv.py  quarantine_bad_replays.py  test_bc_3p.py  test_bc_4p.py  train_bc.py  train_cql.py  train_grp.py  train_ppo.py  train_ppo_j7zang.sbatch  upload_hf_weights.py
riichienv-ml/scripts/akagi_bot/: README.md  bot.py  manifest.toml  online_update.py  pyproject.toml
riichienv-ml/src/riichienv_ml/: config.py  utils.py
riichienv-ml/src/riichienv_ml/configs/3p/: bc_logs.yml  cql.yml  grp.yml  ppo.yml
riichienv-ml/src/riichienv_ml/configs/4p/: bc_logs.yml  bc_model.yml  bc_model_seq.yml  bc_mortal.yml  bc_ppo.yml  bc_seq_logs.yml  cql.yml  grp.yml  ppo.yml  ppo_transformer.yml  ppo_transformer_gentle.yml  ppo_transformer_scratch.yml  ppo_v2.yml
riichienv-ml/src/riichienv_ml/datasets/: grp_dataset.py  mjai_logs.py
riichienv-ml/src/riichienv_ml/features/: sequence_features.py
riichienv-ml/src/riichienv_ml/models/: grp_model.py  transformer.py
riichienv-ml/src/riichienv_ml/trainers/: _dqn_online.py  _ppo_learner.py  _ppo_worker.py  bc_logs.py  bc_model.py  grp.py  kyoku_reward.py  ppo.py
riichienv-python/: Cargo.toml
riichienv-python/src/: lib.rs
src/riichienv/: __init__.py  _riichienv.pyi
src/riichienv/visualizer/: viewer.py
tests/: test_core.py  test_shanten.py
tests/env/: test_kan_dora_timing_events.py  test_majsoul_pao_scoring.py  test_sanma.py
tools/mjsoul-scoring-validation/: validate_env_3p.py  validate_env_4p.py
