[project]
name = "riichienv"
version = "0.3.0"
authors = [
    { name="Kohei Ozaki", email="19337+smly@users.noreply.github.com" },
]
description = "A High-Performance Research Environment for Riichi Mahjong"
readme = "README.md"
# PyO3 0.27 supports Python 3.14
requires-python = ">=3.10,<3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

dependencies = [
    "pyyaml>=6.0.3",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/smly/RiichiEnv"
Issues = "https://github.com/smly/RiichiEnv/issues"

[build-system]
requires = ["maturin>=1.8.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
manifest-path = "riichienv-python/Cargo.toml"
module-name = "riichienv._riichienv"
features = ["extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.8.7,<2.0",
    "pre-commit>=4.5.1",
    "pytest",
    "ruff>=0.8.0",
    "ty>=0.0.7",
]

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "demos",
    "tools",
]

line-length = 120
target-version = "py310"
extend-exclude = ["trunk", "scripts"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL", # Pylint
    "UP", # pyupgrade
]
ignore = [
    "B905",    # Zip-without-explicit-strict
    "F403",    # Unable to detect undefined names
    "N812",    # Lowercase imported as non-lowercase
    "N999",    # Invalid module name
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[project.scripts]
test = "pytest:console_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["trunk"]

[tool.ty.src]
exclude = ["scripts", "tests", "demos", "tools", "test_verifier_daiminkan.py"]

[tool.importlinter]
root_packages = ["riichienv"]

[tool.uv.workspace]
members = [
    "tools/mjsoul-parser",
    "tools/mjsoul-scoring-validation",
]

[tool.ty.environment]
python = "./.venv"
root = ["./src", "."]
