[package]
name = "riichienv-core"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Japanese Mahjong (Riichi) game engine with MJAI protocol support"
repository = "https://github.com/smly/RiichiEnv"
keywords = ["mahjong", "riichi", "mjai", "game-engine"]
categories = ["game-engines", "simulation"]

[lib]
crate-type = ["rlib"]

[dependencies]
pyo3 = { version = "0.27.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ndarray = "0.17"
ahash = "0.8"
base64 = "0.22"

[features]
default = []
python = ["dep:pyo3"]
