[package]
name = "riichienv-python"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "_riichienv"
crate-type = ["cdylib"]

[dependencies]
riichienv-core = { path = "../riichienv-core", features = ["python"] }
pyo3 = { version = "0.27.0" }
serde_json = "1.0"

[features]
default = []
extension-module = ["pyo3/extension-module"]
